--- a/public/shop.html
+++ b/public/shop.html
@@ -13,7 +13,7 @@
 </header>
 
 <div class="container py-4">
-  <!-- Админ-кнопки скрыты для обычного пользователя -->
+  <!-- Админ-кнопки (будут показываться только администратору) -->
   <div id="adminControls" class="d-flex justify-content-between mb-3" style="display:none;">
     <button class="btn btn-success btn-sm" id="addCategoryBtn">Добавить категорию</button>
     <button class="btn btn-success btn-sm" id="addProductBtn">Добавить товар</button>
@@ -26,7 +26,79 @@
   <div class="container text-center" id="footerInfo"></div>
 </footer>
 
-<!-- Модальные окна (регистрация, категории, товары, магазин) оставлены как в предыдущей версии -->
+<!-- Модальные окна -->
+
+<!-- Регистрация -->
+<div class="modal fade" id="registerModal" tabindex="-1">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header"><h5 class="modal-title">Регистрация</h5></div>
+      <div class="modal-body">
+        <form id="registerForm">
+          <div class="mb-3"><label class="form-label">Имя</label><input type="text" class="form-control" name="name" required></div>
+          <div class="mb-3"><label class="form-label">Email</label><input type="email" class="form-control" name="email" required></div>
+          <div class="mb-3"><label class="form-label">Телефон</label><input type="tel" class="form-control" name="phone" required></div>
+          <button type="submit" class="btn btn-primary w-100">Зарегистрироваться</button>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Добавление/редактирование категории -->
+<div class="modal fade" id="categoryModal" tabindex="-1">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header"><h5 class="modal-title" id="categoryModalTitle">Добавить категорию</h5></div>
+      <div class="modal-body">
+        <form id="categoryForm">
+          <input type="hidden" name="id">
+          <div class="mb-3"><label class="form-label">Название категории</label><input type="text" class="form-control" name="name" required></div>
+          <button type="submit" class="btn btn-primary w-100">Сохранить</button>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Добавление/редактирование товара -->
+<div class="modal fade" id="productModal" tabindex="-1">
+  <div class="modal-dialog modal-dialog-centered modal-lg">
+    <div class="modal-content">
+      <div class="modal-header"><h5 class="modal-title" id="productModalTitle">Добавить товар</h5></div>
+      <div class="modal-body">
+        <form id="productForm" enctype="multipart/form-data">
+          <input type="hidden" name="id">
+          <div class="mb-3"><label class="form-label">Название</label><input type="text" class="form-control" name="title" required></div>
+          <div class="mb-3"><label class="form-label">Описание</label><textarea class="form-control" name="description"></textarea></div>
+          <div class="mb-3"><label class="form-label">Цена</label><input type="number" class="form-control" name="price" required></div>
+          <div class="mb-3"><label class="form-label">Фото товара</label><input type="file" class="form-control" name="image"></div>
+          <div class="mb-3"><label class="form-label">Категория</label><select class="form-select" name="category_id"></select></div>
+          <button type="submit" class="btn btn-primary w-100">Сохранить</button>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Редактирование магазина -->
+<div class="modal fade" id="storeModal" tabindex="-1">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header"><h5 class="modal-title">Редактировать магазин</h5></div>
+      <div class="modal-body">
+        <form id="storeForm">
+          <div class="mb-3"><label class="form-label">Название</label><input type="text" class="form-control" name="name"></div>
+          <div class="mb-3"><label class="form-label">ИНН</label><input type="text" class="form-control" name="inn"></div>
+          <div class="mb-3"><label class="form-label">Адрес</label><input type="text" class="form-control" name="address"></div>
+          <div class="mb-3"><label class="form-label">Email</label><input type="email" class="form-control" name="email"></div>
+          <div class="mb-3"><label class="form-label">Телефон</label><input type="tel" class="form-control" name="phone"></div>
+          <button type="submit" class="btn btn-primary w-100">Сохранить</button>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 <script>
@@ -38,17 +110,17 @@ const categoryModal = new bootstrap.Modal(document.getElementById('categoryModal
 const productModal = new bootstrap.Modal(document.getElementById('productModal'));
 const storeModal = new bootstrap.Modal(document.getElementById('storeModal'));
 
-const ADMIN_TOKEN = 'SUPER_SECRET_TOKEN'; // Твой секретный токен для админа
+const ADMIN_TOKEN = 'SUPER_SECRET_TOKEN'; // Ваш токен админа
 
+// Проверка и отображение кнопок только для админа
 async function checkAdmin(){
-  const res = await fetch('/api/is_admin', {
-    headers:{'x-admin-token': ADMIN_TOKEN}
-  });
+  const res = await fetch('/api/is_admin', { headers:{'x-admin-token':ADMIN_TOKEN} });
   const data = await res.json();
   if(data.admin) document.getElementById('adminControls').style.display='flex';
   return data.admin;
 }
 
+// Загрузка информации о магазине
 async function loadStoreInfo(){
   const res = await fetch('/api/store_info');
   const store = await res.json();
@@ -62,6 +134,7 @@ async function loadStoreInfo(){
   `;
 }
 
+// Загрузка категорий
 async function loadCategories(){
   const res = await fetch('/api/categories');
   const categories = await res.json();
@@ -91,12 +164,14 @@ async function loadCategories(){
   }
 }
 
+// Загрузка товаров
 async function loadProducts(){
   const res = await fetch('/api/products');
   allProducts = await res.json();
   renderProducts();
 }
 
+// Отображение товаров
 function renderProducts(){
   const container = document.getElementById('products');
   container.innerHTML = '';
@@ -132,9 +207,9 @@ function renderProducts(){
 }
 
 document.addEventListener('DOMContentLoaded',async()=>{
-  await checkAdmin(); // покажет кнопки только администратору
-  loadStoreInfo(); 
-  loadCategories(); 
+  await checkAdmin();
+  loadStoreInfo();
+  loadCategories();
   loadProducts();
 
   // Регистрация пользователя
@@ -148,6 +223,47 @@ document.addEventListener('DOMContentLoaded',async()=>{
       localStorage.setItem('userRegistered','true'); 
       localStorage.setItem('userData',JSON.stringify(data));
       registerModal.hide();
+    });
+  }
+
+  // --- Админские действия ---
+  const isAdmin = document.getElementById('adminControls').style.display==='flex';
+  if(isAdmin){
+    document.getElementById('addCategoryBtn').onclick=()=>{document.getElementById('categoryModalTitle').textContent='Добавить категорию'; document.getElementById('categoryForm').reset(); categoryModal.show();};
+    document.getElementById('addProductBtn').onclick=()=>{document.getElementById('productModalTitle').textContent='Добавить товар'; document.getElementById('productForm').reset(); productModal.show();};
+    document.getElementById('editStoreBtn').onclick=async()=>{
+      const res = await fetch('/api/store_info'); const store = await res.json();
+      const form = document.getElementById('storeForm');
+      form.name.value=store.name||''; form.inn.value=store.inn||''; form.address.value=store.address||''; form.email.value=store.email||''; form.phone.value=store.phone||'';
+      storeModal.show();
+    };
+
+    // Добавление категории
+    document.getElementById('categoryForm').addEventListener('submit',async e=>{
+      e.preventDefault();
+      const form = e.target;
+      const data={name:form.name.value};
+      await fetch('/api/categories',{method:'POST', headers:{'x-admin-token':ADMIN_TOKEN,'Content-Type':'application/json'},body:JSON.stringify(data)});
+      categoryModal.hide(); loadCategories();
+    });
+
+    // Добавление товара
+    document.getElementById('productForm').addEventListener('submit', async e=>{
+      e.preventDefault();
+      const form = e.target;
+      const formData = new FormData(form);
+      await fetch('/api/products',{method:'POST', headers:{'x-admin-token':ADMIN_TOKEN},body:formData});
+      productModal.hide();
+      loadProducts();
+    });
+
+    // Редактирование магазина
+    document.getElementById('storeForm').addEventListener('submit',async e=>{
+      e.preventDefault();
+      const form=e.target;
+      const data={name:form.name.value,inn:form.inn.value,address:form.address.value,email:form.email.value,phone:form.phone.value};
+      await fetch('/api/store_info',{method:'POST',headers:{'x-admin-token':ADMIN_TOKEN,'Content-Type':'application/json'},body:JSON.stringify(data)});
+      storeModal.hide(); loadStoreInfo();
     });
   }
 });
